--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
     "lodash": "^4.17.21",
     "masonry-layout": "^4.2.2",
-    "popper.js": "^1.16.1",
     "swiper": "^8.0.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
