--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@cloudinary/url-gen": "^1.7.0",
     "@popperjs/core": "^2.11.2",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
     "lodash": "^4.17.21",
     "masonry-layout": "^4.2.2",
-    "swiper": "^8.0.6",
+    "swiper": "^8.0.7",
     "vue": "^3.2.13",
+    "vue-masonry": "^0.14.1",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
