--- a/.git-ftp-ignore
+++ b/.git-ftp-ignore
@@ -1,3 +1,3 @@
-./dist/images/large/*
-./dist/images/micro/*
-./dist/images/thumbs/*
+dist/images/large/*
+dist/images/micro/*
+dist/images/thumbs/*
