--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .DS_Store
 node_modules
-images/thumbs
-images/large
-images/micro
-dist/
+*images/thumbs
+*images/large
+*images/micro
+
 
 # local env files
 .env.local
